yax/manuscript/v4/tables/table3_identifying_variation_all_30_architectures.md
**Analysis status: CONFIRMATORY — FROZEN YAX v1.1.**

| AI measure | Computerization control | Occupations | Correlation | Partial variance | Effective occupations | Top-five share | Five largest contributors |
|---|---|---|---|---|---|---|---|
| AIOE, administrative equal | Webb software patents | 466 | -0.226 | 0.949 | 72.2 | 18.4% | Construction laborers; Laborers and freight, stock, and material movers, hand; Software developers; Landscaping and groundskeeping workers; Maids and housekeeping cleaners |
| AIOE, administrative equal | O*NET computer use: importance | 465 | 0.849 | 0.279 | 73.0 | 17.9% | Elementary and middle school teachers; Police officers; Automotive service technicians and mechanics; Personal care aides; Management analysts |
| AIOE, administrative equal | O*NET computer use: level | 465 | 0.738 | 0.456 | 77.3 | 16.6% | Elementary and middle school teachers; Automotive service technicians and mechanics; Secretaries and administrative assistants, except legal, medical, and executive; Police officers; Laborers and freight, stock, and material movers, hand |
| AIOE, administrative equal | Autor-Dorn RTI | 449 | 0.161 | 0.974 | 62.8 | 20.5% | Laborers and freight, stock, and material movers, hand; Construction laborers; Landscaping and groundskeeping workers; Managers, all other; Driver/sales workers and truck drivers |
| AIOE, administrative equal | Frey-Osborne automation | 440 | -0.358 | 0.872 | 63.8 | 20.0% | Accountants and auditors; Laborers and freight, stock, and material movers, hand; Secretaries and administrative assistants, except legal, medical, and executive; Construction laborers; Maids and housekeeping cleaners |
| AIOE, ability direct | Webb software patents | 455 | -0.22 | 0.952 | 74.6 | 15.9% | Maids and housekeeping cleaners; Construction laborers; Landscaping and groundskeeping workers; Stockers and order fillers; Accountants and auditors |
| AIOE, ability direct | O*NET computer use: importance | 454 | 0.847 | 0.283 | 77.8 | 16.5% | Stockers and order fillers; Management analysts; Chief executives; Financial managers; Elementary and middle school teachers |
| AIOE, ability direct | O*NET computer use: level | 454 | 0.752 | 0.435 | 82.2 | 15.0% | Elementary and middle school teachers; Secretaries and administrative assistants, except legal, medical, and executive; Lawyers; Packers and packagers, hand; Automotive service technicians and mechanics |
| AIOE, ability direct | Autor-Dorn RTI | 439 | 0.152 | 0.977 | 68.2 | 17.8% | Construction laborers; Maids and housekeeping cleaners; Laborers and freight, stock, and material movers, hand; Chief executives; Driver/sales workers and truck drivers |
| AIOE, ability direct | Frey-Osborne automation | 431 | -0.373 | 0.861 | 59.3 | 20.6% | Accountants and auditors; Maids and housekeeping cleaners; Secretaries and administrative assistants, except legal, medical, and executive; Customer service representatives; Construction laborers |
| AIOE, OEWS source weighted | Webb software patents | 456 | -0.24 | 0.942 | 72.1 | 18.1% | Construction laborers; Software developers; Laborers and freight, stock, and material movers, hand; Landscaping and groundskeeping workers; Maids and housekeeping cleaners |
| AIOE, OEWS source weighted | O*NET computer use: importance | 456 | 0.854 | 0.271 | 65.4 | 19.5% | Elementary and middle school teachers; Automotive service technicians and mechanics; Police officers; Personal care aides; Management analysts |
| AIOE, OEWS source weighted | O*NET computer use: level | 456 | 0.741 | 0.452 | 70.3 | 18.3% | Elementary and middle school teachers; Automotive service technicians and mechanics; Secretaries and administrative assistants, except legal, medical, and executive; Driver/sales workers and truck drivers; Laborers and freight, stock, and material movers, hand |
| AIOE, OEWS source weighted | Autor-Dorn RTI | 439 | 0.148 | 0.978 | 62.1 | 20.6% | Laborers and freight, stock, and material movers, hand; Construction laborers; Driver/sales workers and truck drivers; Landscaping and groundskeeping workers; Managers, all other |
| AIOE, OEWS source weighted | Frey-Osborne automation | 433 | -0.369 | 0.864 | 62.8 | 20.2% | Accountants and auditors; Laborers and freight, stock, and material movers, hand; Secretaries and administrative assistants, except legal, medical, and executive; Construction laborers; Driver/sales workers and truck drivers |
| Eloundou alpha (E1) | Webb software patents | 468 | 0.131 | 0.983 | 17.4 | 41.6% | Software developers; Computer programmers; Bookkeeping, accounting, and auditing clerks; Billing and posting clerks; Secretaries and administrative assistants, except legal, medical, and executive |
| Eloundou alpha (E1) | O*NET computer use: importance | 465 | 0.304 | 0.908 | 31.1 | 32.8% | Computer programmers; Bookkeeping, accounting, and auditing clerks; Billing and posting clerks; Data entry keyers; Writers and authors |
| Eloundou alpha (E1) | O*NET computer use: level | 465 | 0.288 | 0.917 | 31.7 | 33.3% | Computer programmers; Bookkeeping, accounting, and auditing clerks; Secretaries and administrative assistants, except legal, medical, and executive; Billing and posting clerks; Data entry keyers |
| Eloundou alpha (E1) | Autor-Dorn RTI | 452 | 0.217 | 0.953 | 11.9 | 46.6% | Software developers; Computer programmers; Bookkeeping, accounting, and auditing clerks; Billing and posting clerks; Computer occupations, all other |
| Eloundou alpha (E1) | Frey-Osborne automation | 440 | 0.257 | 0.934 | 26.3 | 36.0% | Computer programmers; Bookkeeping, accounting, and auditing clerks; Billing and posting clerks; Writers and authors; Data entry keyers |
| Eloundou beta (E1 + 0.5 E2) | Webb software patents | 468 | -0.056 | 0.997 | 53.3 | 22.2% | Software developers; Construction laborers; Maids and housekeeping cleaners; Bookkeeping, accounting, and auditing clerks; Laborers and freight, stock, and material movers, hand |
| Eloundou beta (E1 + 0.5 E2) | O*NET computer use: importance | 465 | 0.797 | 0.365 | 63.2 | 20.1% | First-Line supervisors of retail sales workers; Automotive service technicians and mechanics; Bookkeeping, accounting, and auditing clerks; Sales representatives, wholesale and manufacturing; Driver/sales workers and truck drivers |
| Eloundou beta (E1 + 0.5 E2) | O*NET computer use: level | 465 | 0.73 | 0.468 | 59.5 | 20.6% | Secretaries and administrative assistants, except legal, medical, and executive; Automotive service technicians and mechanics; Bookkeeping, accounting, and auditing clerks; Office clerks, general; Insurance claims and policy processing clerks |
| Eloundou beta (E1 + 0.5 E2) | Autor-Dorn RTI | 452 | 0.169 | 0.971 | 51.7 | 22.8% | Software developers; Laborers and freight, stock, and material movers, hand; Construction laborers; Maids and housekeeping cleaners; Computer programmers |
| Eloundou beta (E1 + 0.5 E2) | Frey-Osborne automation | 440 | -0.154 | 0.976 | 62.9 | 19.8% | Bookkeeping, accounting, and auditing clerks; Secretaries and administrative assistants, except legal, medical, and executive; Maids and housekeeping cleaners; Laborers and freight, stock, and material movers, hand; Construction laborers |
| Eloundou broad (E1 + E2) | Webb software patents | 468 | -0.135 | 0.982 | 84.5 | 15.8% | Maids and housekeeping cleaners; Managers, all other; Laborers and freight, stock, and material movers, hand; Construction laborers; Software developers |
| Eloundou broad (E1 + E2) | O*NET computer use: importance | 465 | 0.833 | 0.306 | 44.4 | 25.2% | First-Line supervisors of retail sales workers; Automotive service technicians and mechanics; Sales representatives, wholesale and manufacturing; First-line supervisors of construction trades and extraction workers; Bus and truck mechanics and diesel engine specialists |
| Eloundou broad (E1 + E2) | O*NET computer use: level | 465 | 0.759 | 0.425 | 72.2 | 18.0% | Automotive service technicians and mechanics; First-Line supervisors of retail sales workers; Secretaries and administrative assistants, except legal, medical, and executive; Customer service representatives; Heating, air conditioning, and refrigeration mechanics and installers |
| Eloundou broad (E1 + E2) | Autor-Dorn RTI | 452 | 0.108 | 0.988 | 77.5 | 17.3% | Laborers and freight, stock, and material movers, hand; Managers, all other; Construction laborers; Maids and housekeeping cleaners; Landscaping and groundskeeping workers |
| Eloundou broad (E1 + E2) | Frey-Osborne automation | 440 | -0.295 | 0.913 | 74.0 | 17.1% | Accountants and auditors; Maids and housekeeping cleaners; Laborers and freight, stock, and material movers, hand; Customer service representatives; Secretaries and administrative assistants, except legal, medical, and executive |

**Note.** Frozen v1.1 values. Reported confidence intervals and p-values use the one-step occupation-cluster wild-score procedure. Where applicable, inference conditions on realized CPS weighted employment-stock cells and does not separately propagate first-stage survey-sampling or calibration-weight uncertainty.
